--- a/case_study/case_study/src/main/resources/templates/views/services/list_services.html
+++ b/case_study/case_study/src/main/resources/templates/views/services/list_services.html
@@ -440,12 +440,10 @@
                     <!--                    ADD NEW SERVICES-->
                     <div class="col-sm-4">
 
-                        <a href="#" class="btn btn-success" id="modalActivate" type="button"
-                           data-toggle="modal"
-                           data-target="#createModal"><i
-                                class="material-icons">&#xE147;</i>
+                        <a href="/services/create" class="btn btn-success" type="button"><i class="material-icons">&#xE147;</i>
                             <span>Add New Services</span>
                         </a>
+<!--                        <a href="/services/create">Create</a>-->
                     </div>
                 </div>
             </div>
@@ -572,7 +570,7 @@
 
 <p id="msg"></p>
 
-<!--MODAL CREATE CUSTOMER-->
+<!--MODAL CREATE SERVICES-->
 <div class="modal fade right" style="background: rgb(0 255 170 / 34%)" id="createModal" tabindex="-1"
      role="dialog" aria-labelledby="exampleModalPreviewLabel" aria-hidden="true" data-keyboard="false"
      data-backdrop="static">
