--- a/case_study/case_study/src/main/resources/templates/views/home.html
+++ b/case_study/case_study/src/main/resources/templates/views/home.html
@@ -36,33 +36,29 @@
     <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
         <div class="navbar-nav">
             <a href="/" class="nav-item nav-link" style="color: white">Home</a>
-            <!--            <c:if test="${sessionScope.userDTO.roldId == 1}">-->
-            <a href="/customer/list" class="nav-item nav-link" style="color: white">
-                Customer
-            </a>
-            <a href="/employee/list" class="nav-item nav-link" style="color: white">
-                Employee
-            </a>
-            <a href="/services/list" class="nav-item nav-link" style="color: white">
-                Service
-            </a>
-            <!--            </c:if>-->
-            <!--            <c:if test="${sessionScope.userDTO.roldId == 0}">-->
-            <a href="/customer/list" class="nav-item nav-link" style="color: white">
-                Customer
-            </a>
-            <a href="/employee/list" class="nav-item nav-link" style="color: white" hidden>
-                Employee
-            </a>
-            <a href="/services/list" class="nav-item nav-link" style="color: white">
-                Service
-            </a>
-            <!--            </c:if>-->
 
-            <!--            <c:if test="${sessionScope.userDTO.roldId == 1}">-->
-            <div class="nav-item dropdown">
+            <!--            ADMIN : all-->
+            <!--            USER: Customer , Service-->
+            <div id="employee">
+                <a href="/employee/list" class="nav-item nav-link" style="color: white">
+                    Employee
+                </a>
+            </div>
+            <div id="customer">
+
+                <a href="/customer/list" class="nav-item nav-link" style="color: white">
+                    Customer
+                </a>
+            </div>
+            <div id="services">
+
+                <a href="/services/list" class="nav-item nav-link" style="color: white">
+                    Service
+                </a>
+            </div>
+            <div class="nav-item dropdown" id="contract">
                 <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle" style="color: white">
-                    Contract
+                    More
                 </a>
                 <div class="dropdown-menu">
                     <a href="/contract/list" class="dropdown-item">
@@ -71,29 +67,9 @@
                     <a href="/contractDetail/list" class="dropdown-item">
                         Contract detail
                     </a>
-                    <a href="#" class="dropdown-item">
-                        Attach service
-                    </a>
                 </div>
             </div>
-            <!--            </c:if>-->
-            <!--            <c:if test="${sessionScope.userDTO.roldId == 0}">-->
-            <div class="nav-item dropdown" hidden>
-                <a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle" style="color: white">
-                    Contract
-                </a>
-                <div class="dropdown-menu">
-                    <a href="/contract/list" class="dropdown-item">
-                        Contract
-                    </a>
-                    <a href="/contractDetail/list" class="dropdown-item">
-                        Contract detail
-                    </a>
-                    <a href="#" class="dropdown-item">
-                        Attach service
-                    </a>
-                </div>
-            </div>
+
             <!--            </c:if>-->
 
         </div>
@@ -102,12 +78,12 @@
 
     <!--    LOGIN-->
     <!--    <c:if test="${sessionScope.userDTO != null}">-->
-    <div class="navbar-nav ml-auto action-buttons" hidden>
+    <div class="navbar-nav ml-auto action-buttons">
         <!--        </c:if>-->
         <!--        <c:if test="${sessionScope.userDTO == null}">-->
-        <div class="navbar-nav ml-auto action-buttons">
+        <div class="navbar-nav ml-auto action-buttons" id="btn-singup">
             <!--            </c:if>-->
-            <div><a href="/login?action=login" class="btn btn-primary sign-up-btn">Sign up</a></div>
+            <div><a href="/login" class="btn btn-primary sign-up-btn">Sign up</a></div>
         </div>
 
         <!--            PERSON-->
@@ -115,7 +91,7 @@
         <div class="navbar-nav ml-auto" }>
             <!--            </c:if>-->
             <!--            <c:if test="${sessionScope.userDTO == null}">-->
-            <div class="navbar-nav ml-auto" } hidden>
+            <div class="navbar-nav ml-auto" }>
                 <!--                </c:if>-->
                 <a href="#" class="nav-item nav-link notifications" style="color: white"><i
                         class="fa fa-bell-o"></i><span
@@ -125,24 +101,14 @@
                         class="badge">10</span></a></a>
                 <div class="nav-item dropdown">
                     <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle appUser-action"
-                       style="color: white"><img
-                            src="https://bootdey.com/img/Content/avatar/avatar6.png" class="avatar"
-                            alt="Avatar">${sessionScope.employee.employeeName}
-                        <b class="caret"></b></a>
-                    <div class="dropdown-menu">
-                        <a href="/employee?action=detail&id=${sessionScope.employee.employeeId}"
-                           class="dropdown-item"><i
-                                class="fa fa-appUser-o"></i>
-                            Profile
-                        </a></a>
-                        <!--        <a href="#" class="dropdown-item"><i class="fa fa-calendar-o"></i> Calendar</a></a>-->
-                        <a href="/employee?action=update&id=${sessionScope.employee.employeeId}"
-                           class="dropdown-item"><i
-                                class="fa fa-sliders"></i>
-                            Update
-                        </a></a>
+                       style="color: white">
+                        <img
+                                src="https://bootdey.com/img/Content/avatar/avatar6.png" class="avatar"
+                                alt="Avatar" style="width: 50px;">
+                        <b class="caret"><span id="appUserName"></span></b></a>
+                    <div class="dropdown-menu" id="logout">
                         <div class="dropdown-divider"></div>
-                        <a href="/home?action=logout" class="dropdown-item"><i class="material-icons">&#xE8AC;</i>
+                        <a href="#" class="dropdown-item" id="btn-logout"><i class="material-icons">&#xE8AC;</i>
                             Logout
                         </a></a>
                     </div>
@@ -203,7 +169,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="..." alt="Four slide">
+            <img src="https://furamavietnam.com/wp-content/uploads/2018/07/RECREATION.jpg" alt="Four slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>A full range of Water Sports will keep you busy. Stop by the Water Sport House where our experienced
                     staff
@@ -244,4 +210,48 @@
 </div>
 
 </body>
+
+<script>
+    $(document).ready(function () {
+        $('#btn-singup').show();
+        $('#logout').hide();
+        $('#employee').hide();
+        $('#contract').hide();
+        $('#customer').hide();
+        $('#services').hide();
+
+        // let existing = window.localStorage.getItem("newAppUserObj");
+        // Get the existing data
+        let existing = localStorage.getItem("appUserObj");
+        // If no existing data, create an array
+        // Otherwise, convert the localStorage string to an array
+        existing = existing ? JSON.parse(existing) : {};
+        if (!jQuery.isEmptyObject(existing)){
+                if (existing.userDetails.authorities[0].authority == "ROLE_ADMIN") {
+                    $('#appUserName').text(existing.employee.employeeName);
+                    $('#btn-singup').hide();
+                    $('#logout').show();
+                    $('#employee').show();
+                    $('#contract').show();
+                    $('#customer').show();
+                    $('#services').show();
+                } else {
+                    $('#appUserName').text(existing.employee.employeeName);
+                    $('#btn-singup').hide();
+                    $('#logout').show();
+                    $('#customer').show();
+                    $('#services').show();
+                }
+            // }
+        }
+
+        $('#btn-logout').click(function (){
+            window.localStorage.clear();
+            window.location.reload();
+        })
+
+    })
+
+
+</script>
 </html>
